kubernetes/api/api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcmcleanerapi-deploy
spec:
  selector:
    matchLabels:
      app: fcmcleanerapi
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fcmcleanerapi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: fcmcleanerapi
          image: localhost:32000/fcm-cleaner:r5
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
