kubernetes/api/api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: fcmcleanerapi-svc
  labels:
    app: fcmcleaner_api
spec:
  type: ClusterIP
  selector:
    app: fcmcleanerapi
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
