kubernetes/api/api_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcmcleaner-ingress
  labels:
    name: fcmcleaner-ingress
spec:
  rules:
    - host: fcmcleaner.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fcmcleanerapi-svc
                port:
                  number: 80
